# gibberishpy

./: README.md  build_model_example.py  pyproject.toml  requirements.txt  scan_gibberish_example.py  transition_matrix_2d.tm
corpus/: corpus.txt
src/pygibberish/: _error.py  scanner.py
