[project]
name = "pygibberish"
version = "1.0.1"
authors = [
  { name="Yuen Shing Yan Hindy", email="yuenshingyan@gmail.com" },
]
description = "Using Markov chain to detect gibberish in text."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yuenshingyan/pygibberish"
"Bug Tracker" = "https://github.com/yuenshingyan/pygibberish/issues"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
